# rle-decoder

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
rle_decoder/: __main__.py  rle_decoder.py
tests/: test_rle.py
